Start new windows venv support
Signed-off-by: Bernát Gábor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,9 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://virtualenv.pypa.io/
 author = Bernat Gabor
+author_email = gaborjbernat@gmail.com
 maintainer = Bernat Gabor
+maintainer_email = gaborjbernat@gmail.com
 license = MIT
 license_file = LICENSE
 platforms = any
@@ -24,14 +26,13 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
     Topic :: Software Development :: Libraries
     Topic :: Software Development :: Testing
     Topic :: Utilities
-author-email = gaborjbernat@gmail.com
 keywords = virtual, environments, isolated
-maintainer-email = gaborjbernat@gmail.com
 project_urls =
     Source=https://github.com/pypa/virtualenv
     Tracker=https://github.com/pypa/virtualenv/issues
