--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
   hooks:
   - id: pyupgrade
 - repo: https://github.com/PyCQA/isort
-  rev: 5.5.4
+  rev: 5.6.3
   hooks:
   - id: isort
 - repo: https://github.com/ambv/black
@@ -36,11 +36,12 @@ repos:
   hooks:
   - id: rst-backticks
 - repo: https://github.com/tox-dev/tox-ini-fmt
-  rev: "0.2.0"
+  rev: "0.5.0"
   hooks:
   - id: tox-ini-fmt
+    args: ["-p", "fix_lint"]
 - repo: https://github.com/asottile/setup-cfg-fmt
-  rev: v1.11.0
+  rev: v1.15.0
   hooks:
   - id: setup-cfg-fmt
     args: [--min-py3-version, "3.4"]
