--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,18 +19,16 @@ repos:
   rev: 5.6.4
   hooks:
   - id: isort
-- repo: https://github.com/ambv/black
+- repo: https://github.com/psf/black
   rev: 20.8b1
   hooks:
   - id: black
     args: [--safe]
-    language_version: python3.8
 - repo: https://github.com/asottile/blacken-docs
   rev: v1.8.0
   hooks:
   - id: blacken-docs
     additional_dependencies: [black==20.8b1]
-    language_version: python3.8
 - repo: https://github.com/pre-commit/pygrep-hooks
   rev: v1.6.0
   hooks:
@@ -50,4 +48,3 @@ repos:
   hooks:
   - id: flake8
     additional_dependencies: ["flake8-bugbear == 20.1.4"]
-    language_version: python3.8
