--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -41,7 +41,7 @@ jobs:
           for i in 1 2 3; do
             echo "try $i" && \
             ${{ runner.os == 'Linux' && 'sudo apt-get update -y && sudo apt-get install fish csh' || true}} && \
-            ${{ runner.os == 'macOS' && 'brew update -vvv && brew install fish tcsh' || true}} && \
+            ${{ runner.os == 'macOS' && 'brew install fish tcsh' || true}} && \
             ${{ runner.os == 'Windows' && ( matrix.py == '2.7' || matrix.py == 'pypy2' ) && 'choco install vcpython27 --yes -f' || true }} && \
             exit 0 || true;
           done
