Switch documentation theme to Furo
Signed-off-by: Pradyun Gedam <pradyunsg@users.noreply.github.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -86,7 +86,7 @@ docs =
     proselint>=0.10.2
     sphinx>=3
     sphinx-argparse>=0.2.5
-    sphinx-rtd-theme>=0.4.3
+    furo >= 2020.11.27.beta19
     towncrier>=19.9.0rc1
 testing =
     coverage>=4
