--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -54,6 +54,8 @@ jobs:
       - name: Install tox
         run: python -m pip install tox
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Use local virtualenv for tox
         run: python -m pip install .
       - name: Setup python for test ${{ matrix.py }}
@@ -117,6 +119,8 @@ jobs:
           - { os: windows, tox_env: docs }
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Setup Python 3.9
         uses: actions/setup-python@v2
         with:
@@ -140,6 +144,8 @@ jobs:
       - name: Install https://pypi.org/project/build
         run: python -m pip install build
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Build sdist and wheel
         run: python -m build -s -w . -o dist
       - name: Publish to PyPi
