Drop virtualenv activator from xonsh
Signed-off-by: Bernát Gábor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,7 +62,6 @@ virtualenv.activate =
     fish = virtualenv.activation.fish:FishActivator
     powershell = virtualenv.activation.powershell:PowerShellActivator
     python = virtualenv.activation.python:PythonActivator
-    xonsh = virtualenv.activation.xonsh:XonshActivator
 virtualenv.create =
     venv = virtualenv.create.via_global_ref.venv:Venv
     cpython3-posix = virtualenv.create.via_global_ref.builtin.cpython.cpython3:CPython3Posix
@@ -98,9 +97,8 @@ testing =
     pytest-mock>=2
     pytest-randomly>=1
     pytest-timeout>=1
-    pytest-xdist>=1.31.0
+    pytest-xdist>=1.31.0,<2.2
     packaging>=20.0;python_version>"3.4"
-    xonsh>=0.9.16;python_version > '3.4' and python_version != '3.9'
 
 [options.package_data]
 virtualenv.activation.bash = *.sh
@@ -108,7 +106,6 @@ virtualenv.activation.batch = *.bat
 virtualenv.activation.cshell = *.csh
 virtualenv.activation.fish = *.fish
 virtualenv.activation.powershell = *.ps1
-virtualenv.activation.xonsh = *.xsh
 virtualenv.seed.wheels.embed = *.whl
 
 [options.packages.find]
