Try to fix the CI
Signed-off-by: Bernát Gábor <bgabor8@bloomberg.net>

--- a/tox.ini
+++ b/tox.ini
@@ -38,7 +38,7 @@ commands =
     python -m coverage erase
     python -m coverage run -m pytest \
       --junitxml {toxworkdir}/junit.{envname}.xml \
-      {posargs:tests --int --timeout 600 -n {env:PYTEST_XDIST:auto}}
+      {posargs:tests --int --timeout 600 -n 0}
     python -m coverage combine
     python -m coverage report --skip-covered --show-missing
     python -m coverage xml -o {toxworkdir}/coverage.{envname}.xml
