--- a/tox.ini
+++ b/tox.ini
@@ -31,14 +31,13 @@ setenv =
     PYTHONIOENCODING = utf-8
     _COVERAGE_SRC = {envsitepackagesdir}/virtualenv
     {py34,py27,pypy2, upgrade}: PYTHONWARNINGS = ignore:DEPRECATION::pip._internal.cli.base_command
-    {py34,pypy2,py27}: PYTEST_XDIST = 0
 extras =
     testing
 commands =
     python -m coverage erase
     python -m coverage run -m pytest \
       --junitxml {toxworkdir}/junit.{envname}.xml \
-      {posargs:tests --int --timeout 600 -n {env:PYTEST_XDIST:auto}}
+      {posargs:tests --int --timeout 600}
     python -m coverage combine
     python -m coverage report --skip-covered --show-missing
     python -m coverage xml -o {toxworkdir}/coverage.{envname}.xml
