--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,7 +2,7 @@
 blank_issues_enabled: true  # default
 contact_links:
 - name: '💬 pypa/virtualenv @ Discord'
-  url: https://discord.gg/tox
+  url: https://discord.gg/pypa
   about: Chat with the devs
 - name: 🤷💻🤦 Discourse
   url: https://discuss.python.org/c/packaging
