--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,4 @@ filename = "docs/changelog.rst"
 directory = "docs/changelog"
 title_format = false
 issue_format = "`#{issue} <https://github.com/pypa/virtualenv/issues/{issue}>`_"
-template = "docs/changelog/template.jinja2"
+template = "docs/changelog/template.jinjaj2"
