--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,7 @@ install_requires =
     six>=1.9.0,<2   # keep it >=1.9.0 as it may cause problems on LTS platforms
     importlib-metadata>=3.6;python_version<"3.8"
     importlib-resources>=1.0;python_version<"3.7"
-    backports.entry_points_selectable
+    backports.entry_points_selectable>=1.0.4
     pathlib2>=2.3.3,<3;python_version < '3.4' and sys.platform != 'win32'
 python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
 package_dir =
