--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ project_urls =
 packages = find:
 install_requires =
     appdirs>=1.4.3,<2
+    backports.entry_points_selectable>=1.0.4
     distlib>=0.3.1,<1
     filelock>=3.0.0,<4
     six>=1.9.0,<2   # keep it >=1.9.0 as it may cause problems on LTS platforms
