Use platformdirs instead of appdirs
Signed-off-by: Bernát Gábor <gaborjbernat@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,10 +39,10 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    appdirs>=1.4.3,<2
     backports.entry_points_selectable>=1.0.4
     distlib>=0.3.1,<1
     filelock>=3.0.0,<4
+    platformdirs>=2,<3
     six>=1.9.0,<2   # keep it >=1.9.0 as it may cause problems on LTS platforms
     importlib-metadata>=0.12;python_version<"3.8"
     importlib-resources>=1.0;python_version<"3.7"
