--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -48,7 +48,9 @@ jobs:
               wget -O nushell.tar.gz $nushell_url &&
               mkdir nushell &&
               tar -xzf nushell.tar.gz -C nushell &&
-              export PATH="nushell/$folder_name/nushell-$version":$PATH'
+              export PATH="nushell/$folder_name/nushell-$version":$PATH' &&
+              echo $PATH &&
+              ls nushell
             || true}} && \
             ${{ runner.os == 'macOS' && 'brew install fish tcsh nushell' || true}} && \
             exit 0 || true;
