correctec check.yml file

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -48,8 +48,7 @@ jobs:
               wget -O nushell.tar.gz $nushell_url &&
               mkdir nushell &&
               tar -xzf nushell.tar.gz -C nushell &&
-              export PATH="nushell/$folder_name/nushell-$version":$PATH' &&
-            || true}} && \
+              export PATH="nushell/$folder_name/nushell-$version":$PATH' || true}} && \
             ${{ runner.os == 'macOS' && 'brew install fish tcsh nushell' || true}} && \
             exit 0 || true;
           done
