--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -43,13 +43,11 @@ jobs:
             ${{ runner.os == 'Linux' && 'sudo apt-get update -y && sudo apt-get install fish csh -y' || true }} && \
             ${{ runner.os == 'Linux' && 'sudo apt-get install curl wget -y' || true }} && \
             ${{ runner.os == 'Linux' && 'nushell_url=$(curl -s https://api.github.com/repos/nushell/nushell/releases/latest | grep "browser_" | cut -d\" -f4 | grep .tar.gz)' || true }} && \
-            ${{ runner.os == 'Linux' && 'folder_name=$(echo $nushell_url | cut -d"/" -f9 | cut -d"." -f 1)' || true }} && \
-            ${{ runner.os == 'Linux' && 'version=$(echo $nushell_url | cut -d"/" -f8)' || true }} && \
             ${{ runner.os == 'Linux' && 'wget -O nushell.tar.gz $nushell_url' || true }} && \
-            ${{ runner.os == 'Linux' && 'mkdir nushell' || true }} && \
-            ${{ runner.os == 'Linux' && 'tar -xzf nushell.tar.gz -C nushell' || true }} && \
-            ${{ runner.os == 'Linux' && 'cp nushell/$folder_name/nushell-$version/nu /usr/bin' || true }} && \
-            ${{ runner.os == 'Linux' && 'cp nushell/$folder_name/nushell-$version/nu_plugin_sys /usr/bin' || true}}  && \
+            ${{ runner.os == 'Linux' && 'tar -xzf nushell.tar.gz --strip-components=1' || true }} && \
+            ${{ runner.os == 'Linux' && 'version=$(echo $nushell_url | cut -d"/" -f8)' || true }} && \
+            ${{ runner.os == 'Linux' && 'sudo cp nushell-$version/nu /usr/bin' || true }} && \
+            ${{ runner.os == 'Linux' && 'sudo cp nushell-$version/nu_plugin_sys /usr/bin' || true}}  && \
             ${{ runner.os == 'macOS' && 'brew install fish tcsh nushell' || true }} && \
             exit 0 || true;
           done
