--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -44,10 +44,9 @@ jobs:
             ${{ runner.os == 'Linux' && 'sudo apt-get install curl wget -y' || true }} && \
             ${{ runner.os == 'Linux' && 'nushell_url=$(curl -s https://api.github.com/repos/nushell/nushell/releases/latest | grep "browser_" | cut -d\" -f4 | grep .tar.gz)' || true }} && \
             ${{ runner.os == 'Linux' && 'wget -O nushell.tar.gz $nushell_url' || true }} && \
-            ${{ runner.os == 'Linux' && 'tar -xzf nushell.tar.gz --strip-components=1' || true }} && \
-            ${{ runner.os == 'Linux' && 'version=$(echo $nushell_url | cut -d"/" -f8)' || true }} && \
-            ${{ runner.os == 'Linux' && 'sudo cp nushell-$version/nu /usr/bin' || true }} && \
-            ${{ runner.os == 'Linux' && 'sudo cp nushell-$version/nu_plugin_sys /usr/bin' || true}}  && \
+            ${{ runner.os == 'Linux' && 'tar -zxf nushell.tar.gz --one-top-level=nushell --strip-components=2' || true }} && \
+            ${{ runner.os == 'Linux' && 'sudo cp nushell/nu /usr/bin' || true }} && \
+            ${{ runner.os == 'Linux' && 'sudo cp nushell/nu_plugin_sys /usr/bin' || true}}  && \
             ${{ runner.os == 'macOS' && 'brew install fish tcsh nushell' || true }} && \
             exit 0 || true;
           done
