--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -48,6 +48,9 @@ jobs:
             ${{ runner.os == 'Linux' && 'sudo cp nushell/nu /usr/bin' || true }} && \
             ${{ runner.os == 'Linux' && 'sudo cp nushell/nu_plugin_sys /usr/bin' || true}}  && \
             ${{ runner.os == 'macOS' && 'brew install fish tcsh nushell' || true }} && \
+            ${{ runner.os == 'Windows' && 'iwr -useb get.scoop.sh | iex' || true }} && \
+            ${{ runner.os == 'Windows' && 'Set-ExecutionPolicy RemoteSigned -scope CurrentUser' || true }} && \
+            ${{ runner.os == 'Windows' && 'scoop install nu' || true }} && \
             exit 0 || true;
           done
           exit 1
