--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,9 +20,9 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - ubuntu-latest
+          #- ubuntu-latest
           - windows-latest
-          - macos-latest
+          #- macos-latest
         py:
           - 3.10.0-rc.1
           - 3.9
