--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,8 +20,8 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - ubuntu-latest
-          - windows-latest
+          #- ubuntu-latest
+          #- windows-latest
           - macos-latest
         py:
           - 3.10.0-rc.1
@@ -47,7 +47,7 @@ jobs:
             ${{ runner.os == 'Linux' && 'tar -zxf nushell.tar.gz --one-top-level=nushell --strip-components=2' || true }} && \
             ${{ runner.os == 'Linux' && 'sudo cp nushell/nu /usr/bin' || true }} && \
             ${{ runner.os == 'Linux' && 'sudo cp nushell/nu_plugin_sys /usr/bin' || true}}  && \
-            ${{ runner.os == 'macOS' && 'brew install fish tcsh nushell' || true }} && \
+            ${{ runner.os == 'macOS' && 'brew install fish tcsh nushell@0.36.0' || true }} && \
             ${{ runner.os == 'Windows' && 'choco install nushell' || true }} && \
             exit 0 || true;
           done
