--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,14 +25,14 @@ jobs:
           - macos-latest
         py:
           - 3.10.0-rc.1
-          - 3.9
-          - 3.8
-          - 3.7
-          - 3.6
-          - 3.5
-          - pypy3
-          - 2.7
-          - pypy2
+          #- 3.9
+          #- 3.8
+          #- 3.7
+          #- 3.6
+          #- 3.5
+          #- pypy3
+          #- 2.7
+          #- pypy2
         include:
           - { os: macos-latest, py: brew@py3 }
     steps:
@@ -47,7 +47,7 @@ jobs:
             ${{ runner.os == 'Linux' && 'tar -zxf nushell.tar.gz --one-top-level=nushell --strip-components=2' || true }} && \
             ${{ runner.os == 'Linux' && 'sudo cp nushell/nu /usr/bin' || true }} && \
             ${{ runner.os == 'Linux' && 'sudo cp nushell/nu_plugin_sys /usr/bin' || true}}  && \
-            ${{ runner.os == 'macOS' && 'brew install fish tcsh nushell@0.36.0' || true }} && \
+            ${{ runner.os == 'macOS' && 'brew install fish tcsh nushell @ 0.36.0' || true }} && \
             ${{ runner.os == 'Windows' && 'choco install nushell' || true }} && \
             exit 0 || true;
           done
