--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -49,9 +49,13 @@ jobs:
             ${{ runner.os == 'Linux' && 'sudo cp nushell/nu_plugin_sys /usr/bin' || true}}  && \
             ${{ runner.os == 'Windows' && 'choco install nushell' || true }} && \
             ${{ runner.os == 'macOS' && 'brew install fish tcsh' || true }} && \
+            ${{ runner.os == 'macOS' && 'echo "curl github"' || true }} && \
             ${{ runner.os == 'macOS' && 'nushell_url=$(curl -s https://api.github.com/repos/nushell/nushell/releases/latest | grep "browser_" | cut -d\" -f4 | grep .tar.gz)' || true }} && \
+            ${{ runner.os == 'macOS' && 'echo "wget"' || true }} && \
             ${{ runner.os == 'macOS' && 'wget -O nushell.tar.gz $nushell_url' || true }} && \
+            ${{ runner.os == 'macOS' && 'echo "untar"' || true }} && \
             ${{ runner.os == 'macOS' && 'tar -zxf nushell.tar.gz --one-top-level=nushell --strip-components=2' || true }} && \
+            ${{ runner.os == 'macOS' && 'echo "cp files"' || true }} && \
             ${{ runner.os == 'macOS' && 'cp nushell/nu /usr/bin' || true }} && \
             ${{ runner.os == 'macOS' && 'cp nushell/nu_plugin_sys /usr/bin' || true}}  && \
             exit 0 || true;
