--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,19 +20,19 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          #- ubuntu-latest
-          #- windows-latest
+          - ubuntu-latest
+          - windows-latest
           - macos-latest
         py:
           - 3.10.0-rc.1
-          #- 3.9
-          #- 3.8
-          #- 3.7
-          #- 3.6
-          #- 3.5
-          #- pypy3
-          #- 2.7
-          #- pypy2
+          - 3.9
+          - 3.8
+          - 3.7
+          - 3.6
+          - 3.5
+          - pypy3
+          - 2.7
+          - pypy2
         include:
           - { os: macos-latest, py: brew@py3 }
     steps:
