all tests enabled

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,8 +20,8 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          #- ubuntu-latest
-          #- windows-latest
+          - ubuntu-latest
+          - windows-latest
           - macos-latest
         py:
           - 3.10.0-rc.1
