--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -40,8 +40,14 @@ jobs:
         run: |
           for i in 1 2 3; do
             echo "try $i" && \
-            ${{ runner.os == 'Linux' && 'sudo apt-get update -y && sudo apt-get install fish csh' || true}} && \
-            ${{ runner.os == 'macOS' && 'brew install fish tcsh' || true}} && \
+            ${{ runner.os == 'Linux' && 'sudo apt-get update -y && sudo apt-get install fish csh -y' || true }} && \
+            ${{ runner.os == 'Linux' && 'sudo apt-get install curl wget -y' || true }} && \
+            ${{ runner.os == 'Linux' && 'nushell_url=$(curl -s https://api.github.com/repos/nushell/nushell/releases/latest | grep "browser_" | cut -d\" -f4 | grep .tar.gz)' || true }} && \
+            ${{ runner.os == 'Linux' && 'wget -O nushell.tar.gz $nushell_url' || true }} && \
+            ${{ runner.os == 'Linux' && 'tar -zxf nushell.tar.gz --one-top-level=nushell --strip-components=2' || true }} && \
+            ${{ runner.os == 'Linux' && 'sudo cp nushell/nu /usr/bin' || true }} && \
+            ${{ runner.os == 'Windows' && 'choco install nushell' || true }} && \
+            ${{ runner.os == 'macOS' && 'brew update && brew install fish tcsh nushell' || true }} && \
             exit 0 || true;
           done
           exit 1
