--- a/setup.cfg
+++ b/setup.cfg
@@ -66,6 +66,7 @@ virtualenv.activate =
     fish = virtualenv.activation.fish:FishActivator
     powershell = virtualenv.activation.powershell:PowerShellActivator
     python = virtualenv.activation.python:PythonActivator
+    nushell = virtualenv.activation.nushell:NushellActivator
 virtualenv.create =
     venv = virtualenv.create.via_global_ref.venv:Venv
     cpython3-posix = virtualenv.create.via_global_ref.builtin.cpython.cpython3:CPython3Posix
@@ -108,6 +109,7 @@ virtualenv.activation.bash = *.sh
 virtualenv.activation.batch = *.bat
 virtualenv.activation.cshell = *.csh
 virtualenv.activation.fish = *.fish
+virtualenv.activation.nushell = *.nu
 virtualenv.activation.powershell = *.ps1
 virtualenv.seed.wheels.embed = *.whl
 
