--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -36,7 +36,7 @@ jobs:
           - 3.5
           - pypy-3.6
           - pypy-3.7
-          - pypy-3.8
+          - pypy-3.8-v7.3.6rc1
           - 2.7
           - pypy-2.7
         include:
