--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -34,9 +34,11 @@ jobs:
           - 3.7
           - 3.6
           - 3.5
-          - pypy3
+          - pypy-3.6
+          - pypy-3.7-v7.3.6rc3
+          - pypy-3.8-v7.3.6rc3
           - 2.7
-          - pypy2
+          - pypy-2.7
         include:
           - { os: macos-latest, py: brew@py3 }
     steps:
