--- a/setup.cfg
+++ b/setup.cfg
@@ -91,7 +91,7 @@ docs =
     sphinx>=3
     sphinx-argparse>=0.2.5
     sphinx-rtd-theme>=0.4.3
-    towncrier>=19.9.0rc1
+    towncrier>=21.3
 testing =
     coverage>=4
     coverage_enable_subprocess>=1
