Omit backports.entry_points_selectable for Python >=3.10

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,11 +40,11 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    backports.entry-points-selectable>=1.0.4
     distlib>=0.3.1,<1
     filelock>=3.2,<4
     platformdirs>=2,<3
     six>=1.9.0,<2   # keep it >=1.9.0 as it may cause problems on LTS platforms
+    backports.entry-points-selectable>=1.0.4;python_version<"3.10"
     importlib-metadata>=0.12;python_version<"3.8"
     importlib-resources>=1.0;python_version<"3.7"
     pathlib2>=2.3.3,<3;python_version < '3.4' and sys.platform != 'win32'
