--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -34,9 +34,9 @@ jobs:
           - 3.7
           - 3.6
           - 3.5
-          - pypy-3.6
-          - pypy-3.7-v7.3.6rc3
-          - pypy-3.8-v7.3.6rc3
+          - pypy-3.6-v7.3.7
+          - pypy-3.7-v7.3.7
+          - pypy-3.8-v7.3.7
           - 2.7
           - pypy-2.7
         include:
