--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,17 +1,17 @@
 version: 2
 build:
-  image: latest
+  os: ubuntu-20.04
+  tools:
+    python: "3.9"
 formats:
   - htmlzip
   - epub
   - pdf
 python:
-   version: 3.7
    install:
       - method: pip
         path: .
-        extra_requirements:
-            - docs
+        extra_requirements: ["docs"]
 sphinx:
   builder: html
   configuration: docs/conf.py
