--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -36,11 +36,11 @@ jobs:
           - "2.7"
           - pypy-2.7
         os:
-          - ubuntu-20.04
-          - macos-10.15
-          - windows-2022
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
         include:
-          - { os: macos-10.15, py: brew@py3 }
+          - { os: macos-latest, py: brew@py3 }
     steps:
       - name: Install OS dependencies
         run: |
@@ -152,8 +152,8 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - ubuntu-20.04
-          - windows-2022
+          - ubuntu-latest
+          - windows-latest
         tox_env:
           - dev
           - docs
@@ -161,8 +161,8 @@ jobs:
           - upgrade
           - zipapp
         exclude:
-          - { os: windows-2022, tox_env: readme }
-          - { os: windows-2022, tox_env: docs }
+          - { os: windows-latest, tox_env: readme }
+          - { os: windows-latest, tox_env: docs }
     steps:
       - uses: actions/checkout@v3
         with:
@@ -181,7 +181,7 @@ jobs:
   publish:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     needs: [check, coverage, lint]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Setup python to build package
         uses: actions/setup-python@v3
