CI: Run cron job weekly (instead of daily)
Once a week is enough to catch changes in dependencies or the environment. Running this extensive CI daily is quite power intensive and thus has a large costs and environmental impact.

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,7 +3,7 @@ on:
   push:
   pull_request:
   schedule:
-    - cron: "0 8 * * *"
+    - cron: "0 8 * * 1"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
