--- a/tox.ini
+++ b/tox.ini
@@ -153,6 +153,14 @@ deps =
 commands =
     python tasks/make_zipapp.py
 
+[testenv:oxidize]
+description = build a standalone executable
+skip_install = true
+deps =
+    pyoxidizer>=0.22
+commands =
+    pyoxidizer build exe --path app
+
 [isort]
 profile = black
 line_length = 120
