Drop runtime support for Python 2
Signed-off-by: Bernát Gábor <gaborjbernat@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,10 +43,8 @@ install_requires =
     distlib>=0.3.1,<1
     filelock>=3.2,<4
     platformdirs>=2,<3
-    six>=1.9.0,<2   # keep it >=1.9.0 as it may cause problems on LTS platforms
     importlib-metadata>=0.12;python_version<"3.8"
     importlib-resources>=1.0;python_version<"3.7"
-    pathlib2>=2.3.3,<3;python_version < '3.4' and sys.platform != 'win32'
 python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
 package_dir =
     =src
@@ -96,13 +94,13 @@ testing =
     coverage>=4
     coverage-enable-subprocess>=1
     flaky>=3
+    packaging>=20.0
     pytest>=4
     pytest-env>=0.6.2
     pytest-freezegun>=0.4.1
     pytest-mock>=2
     pytest-randomly>=1
     pytest-timeout>=1
-    packaging>=20.0;python_version>"3.4"
 
 [options.package_data]
 virtualenv.activation.bash = *.sh
