--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,7 @@ envlist =
     py37
     py36
     py35
-    py27
     pypy3
-    pypy2
     coverage
     readme
     docs
@@ -29,7 +27,7 @@ setenv =
     COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
     PYTHONIOENCODING = utf-8
     _COVERAGE_SRC = {envsitepackagesdir}/virtualenv
-    {py27,pypy2, upgrade}: PYTHONWARNINGS = ignore:DEPRECATION::pip._internal.cli.base_command
+    {upgrade}: PYTHONWARNINGS = ignore:DEPRECATION::pip._internal.cli.base_command
 extras =
     testing
 commands =
