--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -74,7 +74,7 @@ jobs:
           import subprocess; import codecs; import os
           subprocess.check_call(["bash", "-c", "brew upgrade python@3 || brew install python@3"])
           with codecs.open(os.environ["GITHUB_PATH"], "a", "utf-8") as file_handler:
-               file_handler.write("/usr/local/opt/python@3")
+               file_handler.write("/usr/local/opt/python@3/bin")
         shell: python
       - name: Pick environment to run
         run: |
