PyPA publish moved to main
Signed-off-by: Bernát Gábor <gaborjbernat@gmail.com>

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -189,7 +189,7 @@ jobs:
       - name: Build sdist and wheel
         run: python -m build -s -w . -o dist
       - name: Publish to PyPi
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@main
         with:
           skip_existing: true
           user: __token__
