--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,9 +12,13 @@ repos:
   - id: end-of-file-fixer
   - id: trailing-whitespace
 - repo: https://github.com/asottile/pyupgrade
-  rev: v2.37.1
+  rev: v2.37.2
   hooks:
   - id: pyupgrade
+    args: ["--py36-plus"]
+    exclude: "^(src/virtualenv/create/via_global_ref/_virtualenv.py|src/virtualenv/create/via_global_ref/builtin/python2/site.py|src/virtualenv/discovery/py_info.py|tasks/__main__zipapp.py)$"
+  - id: pyupgrade
+    files: "^(src/virtualenv/create/via_global_ref/_virtualenv.py|src/virtualenv/create/via_global_ref/builtin/python2/site.py|src/virtualenv/discovery/py_info.py|tasks/__main__zipapp.py)$"
 - repo: https://github.com/PyCQA/isort
   rev: 5.10.1
   hooks:
@@ -39,10 +43,10 @@ repos:
   - id: tox-ini-fmt
     args: ["-p", "fix_lint"]
 - repo: https://github.com/asottile/setup-cfg-fmt
-  rev: v1.20.1
+  rev: v1.20.2
   hooks:
   - id: setup-cfg-fmt
-    args: [--min-py3-version, "3.5", "--max-py-version", "3.10"]
+    args: [--min-py3-version, "3.6  ", "--max-py-version", "3.10"]
 - repo: https://github.com/PyCQA/flake8
   rev: "4.0.1"
   hooks:
