Test with CPython 3.11
Signed-off-by: Bernát Gábor <gaborjbernat@gmail.com>

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,6 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         py:
+          - "3.11.0-beta.4"
           - "3.10"
           - "3.9"
           - "3.8"
