--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,7 @@ passenv =
 basepython = python3.10
 skip_install = true
 deps =
-    pre-commit>=2
+    pre-commit>=2.20
 commands =
     pre-commit run --all-files --show-diff-on-failure
     python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
@@ -66,8 +66,8 @@ setenv =
     COVERAGE_FILE = {toxworkdir}/.coverage
 skip_install = true
 deps =
-    coverage>=5.0.1
-    diff_cover>=3
+    coverage>=6.4.2
+    diff_cover>=6.5.1
 extras =
 parallel_show_output = true
 commands =
@@ -90,8 +90,8 @@ depends =
 description = check that the long description is valid (need for PyPI)
 skip_install = true
 deps =
-    build>=0.0.4
-    twine>=3
+    build>=0.8
+    twine>=4.0.1
 extras =
 commands =
     python -m build -o {envtmpdir} --wheel --sdist .
@@ -113,7 +113,7 @@ passenv =
     UPGRADE_ADVISORY
 skip_install = true
 deps =
-    black
+    black>=22.6
 changedir = {toxinidir}/tasks
 commands =
     python upgrade_wheels.py
@@ -124,9 +124,9 @@ passenv =
     *
 basepython = python3.10
 deps =
-    gitpython>=3.1.24
+    gitpython>=3.1.27
     packaging>=21.3
-    towncrier>=21.3
+    towncrier>=21.9
 changedir = {toxinidir}/tasks
 commands =
     python release.py --version {posargs}
@@ -136,7 +136,7 @@ description = generate a DEV environment
 usedevelop = true
 deps =
     {[testenv:release]deps}
-    setuptools_scm[toml]>=3.4
+    setuptools_scm[toml]>=7.0.5
 extras =
     docs
     testing
@@ -160,6 +160,8 @@ known_first_party = virtualenv
 [flake8]
 max-complexity = 22
 max-line-length = 120
+noqa-require-code = true
+dictionaries = en_US,python,technical,django
 ignore = E203, W503, C901, E402
 
 [pep8]
