--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
   - id: end-of-file-fixer
   - id: trailing-whitespace
 - repo: https://github.com/asottile/pyupgrade
-  rev: v2.37.2
+  rev: v2.37.3
   hooks:
   - id: pyupgrade
     args: ["--py36-plus"]
@@ -32,7 +32,7 @@ repos:
   rev: v1.12.1
   hooks:
   - id: blacken-docs
-    additional_dependencies: [black==22.6.0]
+    additional_dependencies: [black==22.6]
 - repo: https://github.com/pre-commit/pygrep-hooks
   rev: v1.9.0
   hooks:
@@ -43,12 +43,19 @@ repos:
   - id: tox-ini-fmt
     args: ["-p", "fix_lint"]
 - repo: https://github.com/asottile/setup-cfg-fmt
-  rev: v1.20.2
+  rev: v2.0.0
   hooks:
   - id: setup-cfg-fmt
     args: [--min-py3-version, "3.6  ", "--max-py-version", "3.10"]
 - repo: https://github.com/PyCQA/flake8
-  rev: "4.0.1"
+  rev: "5.0.4"
   hooks:
   - id: flake8
-    additional_dependencies: ["flake8-bugbear == 22.6.22"]
+    additional_dependencies:
+      - flake8-bugbear==22.7.1
+      - flake8-comprehensions==3.10
+      - flake8-pytest-style==1.6
+      - flake8-spellcheck==0.28
+      - flake8-unused-arguments==0.0.11
+      - flake8-noqa==1.2.8
+      - pep8-naming==0.13.1
