--- a/.coveragerc
+++ b/.coveragerc
@@ -16,12 +16,12 @@ omit =
 [coverage:paths]
 source =
     src
-    .tox/*/lib/python*/site-packages
+    .tox/**/lib/python*/site-packages
     .tox/pypy*/site-packages
-    .tox\*\Lib\site-packages
+    .tox\**\Lib\site-packages
     .tox\py\site-packages
-    */src
-    *\src
+    **/src
+    **\src
 
 [coverage:run]
 branch = false
