--- a/.coveragerc
+++ b/.coveragerc
@@ -11,7 +11,7 @@ omit =
     src/virtualenv/create/via_global_ref/builtin/python2/site.py
     src/virtualenv/create/via_global_ref/_virtualenv.py
     src/virtualenv/activation/python/activate_this.py
-    src/virtualenv/seed/wheels/embed/pip-*.whl/*
+    src/virtualenv/seed/wheels/embed/pip-*.whl/**
 
 [coverage:paths]
 source =
