--- a/tox.ini
+++ b/tox.ini
@@ -33,10 +33,10 @@ extras =
     testing
 commands =
     python -m coverage erase
-    python -m coverage run -m pytest {tty:--color=yes} \
+    python -m coverage run --debug=TRACE -m pytest {tty:--color=yes} \
       --junitxml {toxworkdir}/junit.{envname}.xml \
       {posargs:tests --int --timeout 600}
-    python -m coverage combine
+    python -m coverage combine --debug=pathmap
     python -m coverage report --skip-covered --show-missing
     python -m coverage xml -o {toxworkdir}/coverage.{envname}.xml
     python -m coverage html -d {envtmpdir}/htmlcov --show-contexts \
