--- a/setup.cfg
+++ b/setup.cfg
@@ -84,7 +84,7 @@ docs =
     sphinx-rtd-theme>=1
     towncrier>=22.8
 testing =
-    coverage>=6.2
+    git+https://github.com/nedbat/coveragepy@nedbat/debug-virtualenv#egg=coverage==0.0
     coverage-enable-subprocess>=1
     flaky>=3.7
     packaging>=21.3
