--- a/tox.ini
+++ b/tox.ini
@@ -66,7 +66,7 @@ setenv =
     COVERAGE_FILE = {toxworkdir}/.coverage
 skip_install = true
 deps =
-    coverage>=6.5
+    git+https://github.com/nedbat/coveragepy@nedbat/debug-virtualenv#egg=coverage==0.0
     diff_cover>=7.2
 extras =
 parallel_show_output = true
