more more debugging

--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ setenv =
 extras =
     testing
 commands =
+    python -m pip install git+https://github.com/nedbat/coveragepy@nedbat/debug-virtualenv#egg=coverage==0.0
     python -m coverage erase
     python -m coverage run --debug=TRACE -m pytest {tty:--color=yes} \
       --junitxml {toxworkdir}/junit.{envname}.xml \
