--- a/tox.ini
+++ b/tox.ini
@@ -37,6 +37,7 @@ commands =
     python -m coverage run --debug=TRACE -m pytest {tty:--color=yes} \
       --junitxml {toxworkdir}/junit.{envname}.xml \
       {posargs:tests --int --timeout 600}
+    ls -alR
     python -m coverage combine --debug=pathmap
     python -m coverage report --skip-covered --show-missing
     python -m coverage xml -o {toxworkdir}/coverage.{envname}.xml
