--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,8 @@ setenv =
     {upgrade}: PYTHONWARNINGS = ignore:DEPRECATION::pip._internal.cli.base_command
 extras =
     testing
+allowlist_externals =
+    ls
 commands =
     python -m pip install git+https://github.com/nedbat/coveragepy@nedbat/debug-virtualenv#egg=coverage==0.0
     python -m coverage erase
