--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ extras =
 commands =
     python -m pip install git+https://github.com/nedbat/coveragepy@nedbat/debug-virtualenv#egg=coverage==0.0
     python -m coverage erase
-    python -m coverage run --debug=TRACE -m pytest {tty:--color=yes} \
+    python -m coverage run --debug=trace -m pytest {tty:--color=yes} \
       --junitxml {toxworkdir}/junit.{envname}.xml \
       {posargs:tests --int --timeout 600}
     ls -alR
