--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,9 @@ commands =
     python -m coverage run --debug=trace -m pytest {tty:--color=yes} \
       --junitxml {toxworkdir}/junit.{envname}.xml \
       {posargs:tests --int --timeout 600}
+    pwd
     ls -alR
+    ls -alR .tox/py310/lib/python3.10/site-packages/virtualenv/seed/wheels
     python -m coverage debug data
     python -m coverage combine --debug=pathmap
     python -m coverage report --skip-covered --show-missing
@@ -46,6 +48,7 @@ commands =
       --title virtualenv-{envname}-coverage
 allowlist_externals =
     ls
+    pwd
 install_command = python -m pip install {opts} {packages} --disable-pip-version-check
 package = wheel
 wheel_build_env = .pkg
