--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,64 +1,81 @@
 repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.3.0
-  hooks:
-  - id: check-ast
-  - id: check-builtin-literals
-  - id: check-docstring-first
-  - id: check-merge-conflict
-  - id: check-yaml
-  - id: check-toml
-  - id: debug-statements
-  - id: end-of-file-fixer
-  - id: trailing-whitespace
-- repo: https://github.com/asottile/pyupgrade
-  rev: v3.2.1
-  hooks:
-  - id: pyupgrade
-    args: ["--py36-plus"]
-    exclude: "^(src/virtualenv/create/via_global_ref/_virtualenv.py|src/virtualenv/create/via_global_ref/builtin/python2/site.py|src/virtualenv/discovery/py_info.py|tasks/__main__zipapp.py)$"
-- repo: https://github.com/asottile/pyupgrade
-  rev: v2.38.4
-  hooks:
-  - id: pyupgrade
-    files: "^(src/virtualenv/create/via_global_ref/_virtualenv.py|src/virtualenv/create/via_global_ref/builtin/python2/site.py|src/virtualenv/discovery/py_info.py|tasks/__main__zipapp.py)$"
-- repo: https://github.com/PyCQA/isort
-  rev: 5.10.1
-  hooks:
-  - id: isort
-- repo: https://github.com/psf/black
-  rev: 22.10.0
-  hooks:
-  - id: black
-    args: [--safe]
-- repo: https://github.com/asottile/blacken-docs
-  rev: v1.12.1
-  hooks:
-  - id: blacken-docs
-    additional_dependencies: [black==22.10]
-- repo: https://github.com/pre-commit/pygrep-hooks
-  rev: v1.9.0
-  hooks:
-  - id: rst-backticks
-- repo: https://github.com/tox-dev/tox-ini-fmt
-  rev: "0.5.2"
-  hooks:
-  - id: tox-ini-fmt
-    args: ["-p", "fix_lint"]
-- repo: https://github.com/asottile/setup-cfg-fmt
-  rev: v2.2.0
-  hooks:
-  - id: setup-cfg-fmt
-    args: [--min-py3-version, "3.6  ", "--max-py-version", "3.10"]
-- repo: https://github.com/PyCQA/flake8
-  rev: "5.0.4"
-  hooks:
-  - id: flake8
-    additional_dependencies:
-      - flake8-bugbear==22.10.27
-      - flake8-comprehensions==3.10.1
-      - flake8-pytest-style==1.6
-      - flake8-spellcheck==0.28
-      - flake8-unused-arguments==0.0.12
-      - flake8-noqa==1.3
-      - pep8-naming==0.13.2
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+      - id: check-ast
+      - id: check-builtin-literals
+      - id: check-docstring-first
+      - id: check-merge-conflict
+      - id: check-yaml
+      - id: check-toml
+      - id: debug-statements
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+  - repo: https://github.com/asottile/add-trailing-comma
+    rev: v2.4.0
+    hooks:
+      - id: add-trailing-comma
+        args: [--py36-plus]
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.2.1
+    hooks:
+      - id: pyupgrade
+        args: ["--py37-plus"]
+        exclude: "^(src/virtualenv/create/via_global_ref/_virtualenv.py|src/virtualenv/create/via_global_ref/builtin/python2/site.py|src/virtualenv/discovery/py_info.py|tasks/__main__zipapp.py)$"
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.38.4
+    hooks:
+      - id: pyupgrade
+        files: "^(src/virtualenv/create/via_global_ref/_virtualenv.py|src/virtualenv/create/via_global_ref/builtin/python2/site.py|src/virtualenv/discovery/py_info.py|tasks/__main__zipapp.py)$"
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.11.4
+    hooks:
+      - id: isort
+  - repo: https://github.com/psf/black
+    rev: 22.12.0
+    hooks:
+      - id: black
+        args: [--safe]
+  - repo: https://github.com/asottile/blacken-docs
+    rev: v1.12.1
+    hooks:
+      - id: blacken-docs
+        additional_dependencies: [black==22.12]
+  - repo: https://github.com/pre-commit/pygrep-hooks
+    rev: v1.9.0
+    hooks:
+      - id: rst-backticks
+  - repo: https://github.com/tox-dev/tox-ini-fmt
+    rev: "0.5.2"
+    hooks:
+      - id: tox-ini-fmt
+        args: ["-p", "fix"]
+  - repo: https://github.com/PyCQA/flake8
+    rev: 6.0.0
+    hooks:
+      - id: flake8
+        additional_dependencies:
+          - flake8-bugbear==22.12.6
+          - flake8-comprehensions==3.10.1
+          - flake8-pytest-style==1.6
+          - flake8-spellcheck==0.28
+          - flake8-unused-arguments==0.0.12
+          - flake8-noqa==1.3
+          - pep8-naming==0.13.3
+          - flake8-pyproject==1.2.2
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: "v2.7.1"
+    hooks:
+      - id: prettier
+        additional_dependencies:
+          - prettier@3.0.0-alpha.4
+          - "@prettier/plugin-xml@2.2"
+        args: ["--print-width=120", "--prose-wrap=always"]
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.32.2
+    hooks:
+      - id: markdownlint
+  - repo: meta
+    hooks:
+      - id: check-hooks-apply
+      - id: check-useless-excludes
