--- a/tox.ini
+++ b/tox.ini
@@ -1,90 +1,77 @@
 [tox]
 envlist =
-    fix_lint
+    fix
     py311
     py310
     py39
     py38
     py37
-    py36
     pypy3
     coverage
     readme
     docs
 isolated_build = true
 skip_missing_interpreters = true
-minversion = 3.14
+requires = tox>=4
 
 [testenv]
 description = run tests with {basepython}
-passenv =
+extras =
+    test
+commands =
+    coverage erase
+    coverage run -m pytest {posargs:--junitxml {toxworkdir}/junit.{envname}.xml tests --int}
+    coverage combine
+    coverage report --skip-covered --show-missing
+    coverage xml -o {toxworkdir}/coverage.{envname}.xml
+    coverage html -d {envtmpdir}/htmlcov --show-contexts  --title virtualenv-{envname}-coverage
+package = wheel
+pass_env =
     CI_RUN
-    HOME
-    PIP_*
     PYTEST_*
     TERM
-setenv =
-    COVERAGE_FILE = {toxworkdir}/.coverage.{envname}
-    COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
-    PYTHONIOENCODING = utf-8
+set_env =
     _COVERAGE_SRC = {envsitepackagesdir}/virtualenv
+    COVERAGE_FILE = {toxworkdir}/.coverage.{envname}
+    COVERAGE_PROCESS_START = {toxinidir}/pyproject.toml
     {upgrade}: PYTHONWARNINGS = ignore:DEPRECATION::pip._internal.cli.base_command
-extras =
-    testing
-commands =
-    python -m coverage erase
-    python -m coverage run -m pytest {tty:--color=yes} \
-      --junitxml {toxworkdir}/junit.{envname}.xml \
-      {posargs:tests --int --timeout 600}
-    python -m coverage combine
-    python -m coverage report --skip-covered --show-missing
-    python -m coverage xml -o {toxworkdir}/coverage.{envname}.xml
-    python -m coverage html -d {envtmpdir}/htmlcov --show-contexts \
-      --title virtualenv-{envname}-coverage
-install_command = python -m pip install {opts} {packages} --disable-pip-version-check
-package = wheel
 wheel_build_env = .pkg
 
-[testenv:fix_lint]
+[testenv:fix]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
-passenv =
-    *
-basepython = python3.10
 skip_install = true
 deps =
-    pre-commit>=2.20
+    pre-commit>=2.21
 commands =
     pre-commit run --all-files --show-diff-on-failure
-    python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
 
 [testenv:coverage]
 description = [run locally after tests]: combine coverage data and create report;
     generates a diff coverage against origin/main (can be changed by setting DIFF_AGAINST env var)
-passenv =
-    DIFF_AGAINST
-setenv =
-    COVERAGE_FILE = {toxworkdir}/.coverage
 skip_install = true
 deps =
-    coverage>=6.5
-    diff_cover>=7.2
+    covdefaults>=2.2.2
+    coverage[toml]>=7.0.1
+    diff_cover>=7.3
 extras =
 parallel_show_output = true
 commands =
-    python -m coverage combine
-    python -m coverage report --skip-covered --show-missing
-    python -m coverage xml -o {toxworkdir}/coverage.xml
-    python -m coverage html -d {toxworkdir}/htmlcov
-    python -m diff_cover.diff_cover_tool --compare-branch {env:DIFF_AGAINST:origin/main} {toxworkdir}/coverage.xml
+    coverage combine
+    coverage report --skip-covered --show-missing
+    coverage xml -o {toxworkdir}/coverage.xml
+    coverage html -d {toxworkdir}/htmlcov
+    diff-cover --compare-branch {env:DIFF_AGAINST:origin/main} {toxworkdir}/coverage.xml
 depends =
     py311
     py310
     py39
     py38
     py37
-    py36
-    pypy
     pypy3
+pass_env =
+    DIFF_AGAINST
+set_env =
+    COVERAGE_FILE = {toxworkdir}/.coverage
 
 [testenv:readme]
 description = check that the long description is valid (need for PyPI)
@@ -99,7 +86,6 @@ commands =
 
 [testenv:docs]
 description = build documentation
-basepython = python3.10
 extras =
     docs
 commands =
@@ -109,60 +95,39 @@ commands =
 
 [testenv:upgrade]
 description = upgrade pip/wheels/setuptools to latest
-passenv =
-    UPGRADE_ADVISORY
 skip_install = true
 deps =
-    black>=22.10
-changedir = {toxinidir}/tasks
+    black>=22.12
 commands =
     python upgrade_wheels.py
+change_dir = {toxinidir}/tasks
+pass_env =
+    UPGRADE_ADVISORY
 
 [testenv:release]
 description = do a release, required posarg of the version number
-passenv =
-    *
-basepython = python3.10
 deps =
-    gitpython>=3.1.29
-    packaging>=21.3
-    towncrier>=22.8
-changedir = {toxinidir}/tasks
+    gitpython>=3.1.30
+    packaging>=22
+    towncrier>=22.12
 commands =
     python release.py --version {posargs}
+change_dir = {toxinidir}/tasks
 
 [testenv:dev]
 description = generate a DEV environment
-usedevelop = true
-deps =
-    {[testenv:release]deps}
-    setuptools_scm[toml]>=7.0.5
 extras =
     docs
-    testing
+    test
 commands =
     python -m pip list --format=columns
     python -c 'import sys; print(sys.executable)'
+package = editable
 
 [testenv:zipapp]
 description = generate a zipapp
 skip_install = true
 deps =
-    packaging>=21.3
+    packaging>=22
 commands =
     python tasks/make_zipapp.py
-
-[isort]
-profile = black
-line_length = 120
-known_first_party = virtualenv
-
-[flake8]
-max-complexity = 22
-max-line-length = 120
-noqa-require-code = true
-dictionaries = en_US,python,technical,django
-ignore = E203, W503, C901, E402
-
-[pep8]
-max-line-length = 120
